css/style.css
:root {
    /*COLOR*/
    --bg-primary: #F2F2F2;
    --bg-secondary: #090909;

    --fc-starter: #F2F2F2;
    --fc-primary: #3D4449;
    --fc-secondary: #7F888F;
    --fc-tertiary: #218d4c;

    --bc-primary: rgba(210, 215, 217, 0.75);

    /*FONT*/
    --ff-primary: 'Roboto Slab', sans-serif;

    --fs-icons-nav: 1.3rem;
    --fs-icons: 1.5rem;

    --fs-xl: 1.85rem;
    --fs-400: 1.375rem;
    --fs-200: 1.125rem;
    --fs-100: 1rem;
    --fs-50: 0.725rem;


    --fw-primary: 700;
    --fw-secondary: 400;
}
@media (min-width: 40em) {
    :root {
        --fs-icons-nav: 1.20rem;
        --fs-icons: 2rem;

        --fs-xl: 3rem;
        --fs-600: 2rem;
        --fs-400: 1.7rem;
        --fs-200: 1.125rem;
        --fs-100: 1rem;
        --fs-50: 0.8rem;

        --fw-primary: 700;
        --fw-secondary: 400;
    }
}
*,
*::before,
*::after {
    box-sizing: border-box;
}

/******************************************
/* BASE STYLES
/*******************************************/

body {
    transition: 0.5s ease;
    background-color: var(--bg-primary);
}
* {
    font-weight: var(--fw-secondary);
    font-family: var(--ff-primary);
    font-size: var(--fs-100);
    line-height: 1.65;
    color: var(--fc-primary);
}

.p-description,
.project-section-p,
.main-text {
    font-size: var(--fs-100);
    color: var(--fc-primary);
}

.header-decoration,
.technologies {
    font-weight: bold;
}

p {
    line-height: 1.8;
}

/*HEADER & NAV*/

.header-text {
    font-size: var(--fs-200);
}

i {
    font-size: var(--fs-icons-nav);
    transition: all 0.5s ease-out;
}

.header-text, .p-description {
    color: var(--fc-primary);
}

/*MAIN*/

h1 {
    color: var(--fc-primary);
    font-size: var(--fs-xl);
    font-weight: var(--fw-primary);
    line-height: 1.3;
}

.main-text {
    color: var(--fc-primary);
}

/*SERVICES SECTION*/

.service-icons {
    font-size: var(--fs-icons);
}


/*PROJECTS SECTION*/

h2 {
    display: inline-block;
    color: var(--fc-primary);
    font-size: var(--fs-400);
    font-weight: var(--fw-primary);
}
h4 {
    color: var(--fc-primary);
    font-size: var(--fs-200);
    font-weight: var(--fw-primary);
}

/* FOOTER */

footer {
    padding-block: 1rem;
}

.copyright {
    font-size: var(--fs-50);
    text-align: center;
}

/******************************************
/* LAYOUT
/*******************************************/

* {
    margin: 0;
    padding: 0;
}

.container {
    margin-inline: auto;
    width: min(90%, 70.5rem);
}
  
html {
    scroll-behavior: smooth;
}
section {
    padding-block: 2.5rem;
}

/*HEADER & NAV*/

header {
    display: flex;
    justify-content: space-evenly;
    padding-block: 1.25rem;
    align-items: center;
}
.header-container-text {
    width: 100%;
}
nav {
    display: flex;
    width: 100%;
    justify-content: flex-end;
}
.navlist-flex * {
    display: flex;
    gap: 1.8rem;
}

/*MAIN*/

main {
    padding-bottom: 5rem;
}
.main-container {
    display: flex;
    justify-content: space-between;
    flex-direction: row-reverse;
    margin-top: 3.5rem;
}
.main-container-split {
    width: 50%;
}
.main-container-photo {
    padding-left: 2rem;
}
.headshot-container {
    display: block;
    height: 26em;
    width: 100%;
}
.headshot {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 0.375em;
}
.main-text {
    padding-bottom: 1rem;
}
.main-button-container {
    padding-top: 3.5rem;
}
.about-me {
    padding-bottom: 1rem;
}

/*SERVICES SECTION*/

.services-section-container {
    display: flex;
    flex-wrap: wrap;
    margin-top: 4rem;
    width: calc(100% + 3em);
}
.services-section-container--service {
    display: flex;
    width: calc(50% - 3em);
}
.service-left {
    margin-right: 2rem;
}
.container-service-icons {
    padding-right: 1.5rem;
}
.services-h4 {
    padding-bottom: 0.8rem;
}

/*PROJECTS SECTION*/

.project-section {
    padding-bottom: 0rem;
}
.projects {
    display: flex;
    flex-wrap: wrap;
    margin: 3rem 0 0rem -6rem;
    width: calc(100% + 6rem);
}

.projects article {
    display: block;
    position: relative;
    width: calc(50% - 7em);
    margin: 0 0 6em 6em;
}
.projects-a-img {
    display: block;
    overflow: hidden;
    margin-bottom: 1rem;
    border-radius: 0.375em;
}
.projects-img {
    display: block;
    position: relative;
    width: 100%;
    border-radius: 0.375em;
    transition: 0.2s ease;
}
.projects-img:hover {
    transform: scale(1.05);
}
.project-section-p {
    padding-bottom: 2rem;
    padding-top: 0.5rem;
    min-height: 5.813rem;
}
.p-description {
    padding-block: 0.5rem;
    min-height: 7.875rem;
}

/******************************************
/* ADDITIONAL STYLES
/*******************************************/

.p-description {
    border-bottom: 1px solid rgba(210, 215, 217, 0.75);
}

li {
    list-style: none;
    text-decoration: none;
}
a {
    text-decoration: none;
}
i:hover {
    color: var(--fc-tertiary);
    opacity: 0.8;
}
.service-icons:hover {
    rotate: -360deg;
}
.header-text:hover {
    transition: 0.3s ease;
    color: var(--fc-tertiary);
}
header {
    border-bottom: 0.313rem solid var(--fc-tertiary);
}
main {
    border-bottom: 0.15rem solid rgba(210, 215, 217, 0.75);
}
.button {
    color: var(--fc-tertiary);
    font-size: var(--fs-50);
    font-weight: var(--fw-primary);
    letter-spacing: 0.075em;
    border: 0.125rem solid var(--fc-tertiary);
    border-radius: 0.375em;
    padding:  0.7rem 1.125rem;
}
.button,
.uppercase-text {
    text-transform: uppercase;
}
.button:hover {
    opacity: 0.8;
}
h2 {
    border-bottom: 0.188rem solid var(--fc-tertiary);
}
.services-section {
    border-bottom: 0.15rem solid rgba(210, 215, 217, 0.75);
}
.projects article::before {
    background: rgba(210, 215, 217, 0.75);
    content: '';
    display: block;
    height: calc(100% + 3.2rem);
    right: 51%;
    position: fixed;
    top: 0;
    width: 1px;
    height: 96%;
}

.projects article::after {
    background: rgba(210, 215, 217, 0.75);
    bottom: -3em;
    content: '';
    display: block;
    height: 1px;
    position: absolute;
    right: 0;
    width: 100%;
}
.dark-mode {
    transition: 0.5s ease;
    background-color: var(--bg-secondary);
}
.dark-mode-fonts *{
    color: var(--bg-primary);
}

.dark-mode-buttons {
    color: var(--fc-tertiary);
}
#darkMode {
    cursor: pointer;
}
#darkMode:active {
    rotate: -360deg;
}
.module {
    margin-top: 2rem;
    padding-inline: 1rem;
    border-width: 0.188rem;
    border-style: solid;
    border-image: 
        radial-gradient(
        #00C853, 
        rgba(0, 0, 0, 0)
        )0 100%;
}


/******************************************
/* MEDIA QUERY
/*******************************************/

@media (max-width: 40rem) {

    /* HEADER */
    header {
        display: flex;
        flex-direction: column-reverse;
        padding-bottom: 0.8rem;
    }
    .header-container-text {
        display: flex;
        justify-content: center;
        padding-top: 0.8rem;
    }
    nav {
        justify-content: center;
    }
    .navlist-flex * {
        display: flex;
        gap: 2rem;
    }
    #darkMode {
        width: 1.3rem;
    }
    /* MAIN */
    main {
        padding-bottom: 2rem;
    }
    .main-container,
    .services-section-container {
        display: block;
    }
    .main-container-split {
        width: 100%;
    }
    .main-container-photo {
        padding-left: 0rem;
        padding-bottom: 3rem;
    }
    .text-center {
        text-align: center;
    }
    h2 {
        display: block;
    }
    .main-button-container {
        padding-block: 3rem;
    }
    .module {
        margin-top: 2rem;
    }
    /* PROJECT */
    .projects {
        display: flex;
        flex-wrap: wrap;
        margin: 3rem 0 0 0;
        width: 100%;
    }
    
    .projects article {
        display: block;
        position: relative;
        width: 100%;
        margin: 0 0 6rem 0;
    }

    .projects article::before {
        display: none;
    }
    
    /* SERVICES  */
    .services-section-container {
        width: 100%;
    }
    .services-section-container--service {
        width: 100%;
    }
    .service-left {
        margin-right: 0;
    }
}

